<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">proxyX</string>
    <string name="title_proxy">proxy</string>
    <string name="title_x">X</string>
    <string name="version_text">v1.0.0+1</string>

    <string name="status_running">Подключено</string>
    <string name="status_stopped">Отключено</string>
    <string name="proxy_status_prefix">Статус Proxy: </string>
    <string name="proxy_status_on">ВКЛЮЧЕН</string>
    <string name="proxy_status_off">ВЫКЛЮЧЕН</string>
    <string name="state_on">Подключено</string>
    <string name="state_off">Отключено</string>
    <string name="state_icon_desc">Состояние прокси</string>

    <string name="add_proxy">Добавить proxy в телеграм</string>
    <string name="check_updates">Проверить обновления</string>
    <string name="stop_button">Остановить</string>
    <string name="nav_home">ГЛАВНАЯ</string>
    <string name="nav_settings">НАСТРОЙКИ</string>
    <string name="channel_name">proxyX service</string>
    <string name="telegram_not_found">Telegram не найден на устройстве</string>

    <string name="checking_updates">Проверяю обновления…</string>
    <string name="latest_installed">У вас установлена последняя версия</string>
    <string name="update_available_title">Доступно обновление</string>
    <string name="update_available_body">Новый релиз: %1$s\nТекущая версия: %2$s</string>
    <string name="update_now">Обновить</string>
    <string name="update_later">Позже</string>
    <string name="update_check_failed">Не удалось проверить обновления</string>
    <string name="version_current">Версия: %1$s</string>
    <string name="version_with_latest">Версия: %1$s • Latest: %2$s</string>

    <string name="settings_proxy_ip">IP-адрес прокси</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_proxy_port">Порт прокси</string>
    <string name="settings_dc_mappings">DC → IP маппинги (по одному на строку, формат DC:IP)</string>
    <string name="settings_verbose">Подробное логирование</string>
    <string name="settings_hint_restart">Изменения вступят в силу после перезапуска прокси.</string>
    <string name="settings_save">Сохранить</string>
    <string name="settings_reset">Сбросить настройки</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="settings_reset_done">Настройки сброшены</string>
    <string name="settings_host_required">Введите IP-адрес прокси</string>
    <string name="settings_port_invalid">Введите корректный порт (1-65535)</string>
    <string name="settings_dc_required">Введите хотя бы один DC:IP маппинг</string>
</resources>
